# Allocator

./: CMakeLists.txt  README.md  main.cpp
Allocator/: ASettings.h  Allocator.h  MemoryPoolsAllocator.h  Pool.h  PoolComparator.h  PoolSettings.h
tests/: Test.cpp  Test.h  make_chart.py
